WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88617
Spellchecker crash in async scenario.
https://bugs.webkit.org/show_bug.cgi?id=88617
Summary
Spellchecker crash in async scenario.
Hajime Morrita
Reported
2012-06-07 22:01:46 PDT
From
http://code.google.com/p/chromium/issues/detail?id=131656
Attachments
Patch
(1.58 KB, patch)
2012-06-07 22:15 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.56 KB, patch)
2012-06-10 20:52 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2012-06-07 22:04:02 PDT
Note that this affects only Chromium since it is the only port who uses async spellchecker.
Hajime Morrita
Comment 2
2012-06-07 22:15:27 PDT
Created
attachment 146478
[details]
Patch
Tony Chang
Comment 3
2012-06-08 10:11:49 PDT
Comment on
attachment 146478
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=146478&action=review
> Source/WebCore/ChangeLog:3 > + TextCheckingcNeed a short description and bug URL (OOPS!)
Typo?
Hajime Morrita
Comment 4
2012-06-10 19:27:27 PDT
(In reply to
comment #3
)
> (From update of
attachment 146478
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=146478&action=review
> > > Source/WebCore/ChangeLog:3 > > + TextCheckingcNeed a short description and bug URL (OOPS!) > > Typo?
Oops apparently. Thanks for the catch. Will fix and land.
Hajime Morrita
Comment 5
2012-06-10 20:52:57 PDT
Created
attachment 146772
[details]
Patch for landing
WebKit Review Bot
Comment 6
2012-06-11 01:17:32 PDT
Comment on
attachment 146772
[details]
Patch for landing Clearing flags on attachment: 146772 Committed
r119960
: <
http://trac.webkit.org/changeset/119960
>
WebKit Review Bot
Comment 7
2012-06-11 01:17:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug