Spellchecker crash in async scenario. https://bugs.webkit.org/show_bug.cgi?id=88617

Reviewed by Tony Chang.

SpellCheckRequest::invokeRequest() can be reached after the frame is detached.
SpellCheckRequest should ignore such a request since TextCheckerClient is not available
for detached Frames.

No new tests. It's hard to reproduce this.

* editing/SpellChecker.cpp:
(WebCore::SpellChecker::invokeRequest):


Canonical link: https://commits.webkit.org/106596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119960 268f45cc-cd09-0410-ab3c-d52691b4dbfc