Source/WebCore/editing/SpellChecker.cpp
@@ -178,6 +178,10 @@ void SpellChecker::requestCheckingFor(PassRefPtr<SpellCheckRequest> request)
 void SpellChecker::invokeRequest(PassRefPtr<SpellCheckRequest> request)
 {
     ASSERT(!m_processingRequest);
+    if (!client()) {
+        request->didCancel();
+        return;
+    }
 
     m_processingRequest = request;
     client()->requestCheckingOfString(m_processingRequest);
